--- a/src/app/components/emotions/emotions.component.html
+++ b/src/app/components/emotions/emotions.component.html
@@ -1,3 +1,6 @@
-<p>
-  emotions works!
-</p>
+<thead [hidden]="true">emotion</thead>
+<tbody>
+  <tr *ngFor="let emotion of emotions">
+    <td>{{emotion}}</td>
+  </tr>
+</tbody>
