--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,3 @@
-<p>
-  footer works!
-</p>
+  <footer class="container-fluid bg-dark text-white align-bottom py-2 fixed-bottom">
+    Coded with <i class="fa fa-heart"></i> by Nodi.
+  </footer>
