--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,24 @@
-<p>
-  navbar works!
-</p>
+<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+  <div class="container">
+    <a routerLink="/" class="navbar-brand">DiaryNotes</a>
+    <button class="btn btn-dark" type="button" data-toggle="collapse" data-target="#navbarMain">
+      <span class="fa fa-bars"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-between" id="navbarMain">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a routerLink="" class="nav-link">Dashboard</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/about" class="nav-link">About</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/contact" class="nav-link">Contact</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/settings" class="nav-link">Settings</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
