refactor dashboard sub-components

--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,3 +1,14 @@
-<p>
-  skills works!
-</p>
+<div class="container-fluid">
+  <div id="card-header" class="card mt-2">
+  <table>
+    <thead>
+      <h2 class="pl-2 font-weight-light">Skills</h2>
+    </thead>
+    <tbody *ngFor="let skill of skills">
+      <td>{{skill}}</td>
+    </tbody>
+  
+    <button (click)="addSkill()" class="btn btn-success btn-block"><i class="fa fa-plus"></i></button>
+  </table>
+  </div>
+</div>
