--- a/src/app/components/emotions/emotions.component.html
+++ b/src/app/components/emotions/emotions.component.html
@@ -1,6 +1,14 @@
-<thead [hidden]="true">emotion</thead>
-<tbody>
-  <tr *ngFor="let emotion of emotions">
-    <td>{{emotion}}</td>
-  </tr>
-</tbody>
+<div class="container-fluid">
+  <div id="card-header" class="card mt-2">
+  <table>
+    <thead>
+      <h2 class="pl-2 font-weight-light">Emotions</h2>
+    </thead>
+    <tbody *ngFor="let emotion of emotions">
+      <td>{{emotion}}</td>
+    </tbody>
+  
+    <button (click)="addEmotion()" class="btn btn-success btn-block"><i class="fa fa-plus"></i></button>
+  </table>
+  </div>
+</div>
