implement navigation to calendar slide

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,9 +1,11 @@
-<swiper>
+
+<div class="swiper-container" [swiper]="config" [(index)]="index">
   <div class="swiper-wrapper">
+    <app-calendar class="swiper-slide"></app-calendar>
     <app-emotions class="swiper-slide"></app-emotions>
     <app-urges class="swiper-slide"></app-urges>
     <app-actions class="swiper-slide"></app-actions>
     <app-skills class="swiper-slide"></app-skills>
   </div>
   <div class="swiper-pagination"></div>
-</swiper>
+</div>
