outline about section

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,3 +1,5 @@
-<p>
-  about works!
-</p>
+<h2 class="font-weight-light ml-2 mt-2">About</h2>
+<p class="font-weight-light ml-5">Inspiration for this project</p>
+<p class="font-weight-light ml-5">How to use diary notes (incl. using them without a therapist)</p>
+<p class="font-weight-light ml-5">Plug for donations</p>
+<p class="font-weight-light ml-5">Well-wishes/sign-off</p>
