--- a/src/app/components/actions/actions.component.html
+++ b/src/app/components/actions/actions.component.html
@@ -2,7 +2,7 @@
   <div id="card-header" class="card mt-2">
   <table>
     <thead>
-      <h2 class="pl-2 font-weight-light">Actions</h2>
+      <h2 class="pl-2">Actions</h2>
     </thead>
     <tbody *ngFor="let action of actions">
       <td>{{action}}</td>
