--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -2,7 +2,7 @@
   <div id="card-header" class="card mt-2">
   <table>
     <thead>
-      <h2 class="pl-2 font-weight-light">Skills</h2>
+      <h2 class="pl-2">Skills</h2>
     </thead>
     <tbody *ngFor="let skill of skills">
       <td>{{skill}}</td>
