--- a/src/app/components/urges/urges.component.html
+++ b/src/app/components/urges/urges.component.html
@@ -2,7 +2,7 @@
   <div id="card-header" class="card mt-2">
   <table>
     <thead>
-      <h2 class="pl-2 font-weight-light">Urges</h2>
+      <h2 class="pl-2">Urges</h2>
     </thead>
     <tbody *ngFor="let urge of urges">
       <td>{{urge}}</td>
