--- a/src/app/components/emotions/emotions.component.html
+++ b/src/app/components/emotions/emotions.component.html
@@ -2,7 +2,7 @@
   <div id="card-header" class="card mt-2">
   <table>
     <thead>
-      <h2 class="pl-2 font-weight-light">Emotions</h2>
+      <h2 class="pl-2">Emotions</h2>
     </thead>
     <tbody *ngFor="let emotion of emotions">
       <td>{{emotion}}</td>
