implement day count on temp calendar

--- a/src/app/components/emotions/emotions.component.html
+++ b/src/app/components/emotions/emotions.component.html
@@ -7,7 +7,9 @@
 
     <!--calendar-->
 
-    <tbody>
+    <app-calendar [log]="log"></app-calendar>
+
+    <!-- <tbody>
       <h4 class="ml-2">{{getMonth()}}</h4>
       <table class="ml-3 mb-3">
         <tr >
@@ -26,7 +28,7 @@
           </td>
         </tbody>
       </table>
-    </tbody>
+    </tbody> -->
 
     <!-- <tbody>
       <h3>{{getMonth()}}</h3>
