--- a/src/app/components/emotions/emotions.component.html
+++ b/src/app/components/emotions/emotions.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
-  <div id="card-header" class="card mt-2">
+<div class="card mt-2">
   <table>
-    <thead>
-      <h2 class="ml-2">Emotions</h2>
+    <thead id="card-header">
+      <h2 class="pl-2">Emotions</h2>
     </thead>
 
     <!--calendar-->
@@ -45,5 +45,5 @@
   
     <button (click)="addEmotion()" class="btn btn-success btn-block"><i class="fa fa-plus"></i></button>
   </table>
-  </div>
+</div>
 </div>
