--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -1,5 +1,5 @@
 <tbody>
-  <h4 class="ml-2">{{getMonth()}}</h4>
+  <h4 class="ml-2">{{getMonth()}}, {{this.log.year}}</h4>
   <table class="ml-1 mb-3">
     <tr >
       <th></th>
