implement generation of null cells for current month

--- a/src/app/components/emotions/emotions.component.html
+++ b/src/app/components/emotions/emotions.component.html
@@ -7,7 +7,7 @@
 
     <!--calendar-->
 
-    <app-calendar [log]="log"></app-calendar>
+    <app-calendar [log]="log" (numDaysLoaded)="numDaysHandler($event)"></app-calendar>
 
     <!-- <tbody>
       <h4 class="ml-2">{{getMonth()}}</h4>
